# aoc-2020

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
aoc/: __init__.py  day.py  day_01.py  day_01_pt2.py  day_02.py  day_02_pt2.py  day_03.py  day_03_pt2.py  day_04.py  day_04_pt2.py  day_05.py  day_05_pt2.py  day_06.py  day_06_pt2.py  day_07.py  day_08.py  inf_list.py  template.py
inputs/: input_01_big.txt  input_01_random.txt  input_05_big.txt  input_06_big.txt
tests/: day_test.py  inf_list_test.py
