[tool.poetry]
authors = ["Felipe 'Bidu' Rodrigues <felipe@felipevr.com>"]
description = "My code for 2020's Advent of Code"
license = "MIT"
name = "aoc-2020"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^19.10-beta.0", allow-prereleases = true}
ipython = "^7.13"
pre-commit = {version = "^2.0"}
pylint = "^2.4"
pytest = {version = "^6.0"}
pytest-cov = "^2.10.0"

[tool.pytest.ini_options]
addopts = """
    -ra -vv
    --cov=aoc
    --cov-report term-missing:skip-covered
    --doctest-modules
"""

minversion = "6.0"
testpaths = [
  "tests",
]
[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
